all the user func needed